Actions
Bug #844
closedm4 should say something useful about why an include()d file can't be opened
Start date:
2011-03-20
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
if you include() a file in m4 and it fails, m4 says: "can't open file" and shows the source line. It gives no indication of the error. It should.
Updated by Gary Mills about 11 years ago
I'd be happy to take this one on. I have a good fix.
Just have to test it and build a webrev now.
Updated by Garrett D'Amore about 11 years ago
- Subject changed from m4 should say something useful about _why_ an include()d file can't be opened to m4 should say something useful about why an include()d file can't be opened
- Difficulty set to Medium
- Tags set to needs-triage
Updated by Garrett D'Amore about 11 years ago
- Status changed from New to Resolved
- Assignee set to Gary Mills
- % Done changed from 0 to 100
- Tags deleted (
needs-triage)
Resolved in:
changeset: 13362:4f5bb85e2547
tag: tip
user: Gary Mills <Gary Mills <mills@cc.umanitoba.ca>
date: Fri May 06 07:32:53 2011 -0700
description:
844 m4 should say something useful about why an include()d file can't be opened
Reviewed by: Richard Lowe <richlowe@richlowe.net>
Reviewed by: Garrett D'Amore <garrett@nexenta.com>
Approved by: Garrett D'Amore <garrett@nexenta.com>
Actions